# AIorzea

./: .gitignore  pyproject.toml  requirements.txt
src/aiorzea/: comms.py  task_manager.py
src/aiorzea/tools/: base.py  query.py
